# vulntimeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
demos/01-coordinated-disclosure-healthy/: SCENARIO.md  advisories.json
demos/02-zero-day-exploited-first/: SCENARIO.md  advisories.json
demos/03-slow-patch-sla-breach/: SCENARIO.md  advisories.json
demos/04-unpatched-backlog/: SCENARIO.md  advisories.json
demos/05-data-entry-errors/: SCENARIO.md  advisories.json
demos/06-mixed-date-formats/: SCENARIO.md  advisories.json
demos/07-ci-quality-gate/: SCENARIO.md  advisories.json
demos/08-sarif-code-scanning/: SCENARIO.md  advisories.json
demos/09-live-feed-enrichment/: SCENARIO.md  advisories.json
demos/09-live-feed-enrichment/feeds_cache/: cisa-kev.data  cisa-kev.meta.json  epss.data  epss.meta.json  osv.meta.json
examples/: advisories.json
ports/: README.md
ports/go/: go.mod  helpers_test.go  vulntimeline.go  vulntimeline_test.go
ports/node/: package.json  test.js  vulntimeline.js
ports/rust/: Cargo.toml
ports/rust/src/: core.rs  json.rs  main.rs
tests/: test_cli.py  test_cli_vulndb.py  test_core.py  test_demos.py  test_feeds.py  test_ports_parity.py  test_sarif.py  test_vulndb_local.py  test_vulnmatch.py
tests/fixtures/feeds_cache/: osv.data
vulntimeline/: __init__.py  __main__.py  cli.py  core.py  data_feeds_2026.json  datafeeds.py  feeds.py  render.py  sarif.py  vulnmatch.py
